<resources>
    <string name="app_name">Android-Oreo</string>
    <string name="title_fonts">Fonts</string>
    <string name="title_emoji">Emoji</string>
    <string name="title_autosizing">Autosizing</string>
    <string name="title_pip">Picture in Picture</string>

    <!-- Fonts -->
    <string name="fonts_download">Apply</string>
    <string name="fonts_downloadable">Downloadable Fonts</string>
    <string name="fonts_disclaimer">“Clean code always looks like it was written by someone who cares. by Michael Feathers”</string>

    <!-- Emoji -->
    <string name="emoji_text_view">Emoji TextView</string>
    <string name="emoji_edit_text">Emoji EditText</string>
    <string name="emoji_button">Emoji Button</string>
    <string name="emoji_regular">Regular TextView</string>
    <string name="emoji_custom">Custom TextView</string>

    <string name="emoji_text_view_text">%s for brunch? </string>
    <string name="emoji_edit_text_text">Hello %s, How are you?</string>
    <string name="emoji_button_text">Force Mexico %s</string>
    <string name="emoji_regular_text">Where Are Arctic Monkeys? %s</string>
    <string name="emoji_custom_text">I am a custom view %s</string>

    <!-- Autosizing -->
    <string name="autosizing_default">Default</string>
    <string name="autosizing_granularity">Granularity</string>
    <string name="autosizing_preset_sizes">Preset Sizes</string>
    <string name="autosizing_scale_x">Scale X</string>
    <string name="autosizing_scale_y">Scale Y</string>

    <string name="autosizing_default_disclaimer">Default setting lets the autosizing of TextView scale uniformly on horizontal and vertical axes.</string>
    <string name="autosizing_granularity_disclaimer">You can define a range of minimum and maximum text sizes and a dimension that specifies the size of each step. The TextView scales uniformly in a range between the minimum and maximum size attributes. Each increment occurs as per the step size set in the granularity attribute.</string>
    <string name="autosizing_preset_sizes_disclaimer">Preset sizes lets you specify all the values that the TextView picks when automatically auto-sizing text.</string>

</resources>
