<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
  <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/space_default"
      >

    <TextView
        android:id="@+id/text_fonts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_mono_thin"
        android:text="@string/title_fonts"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/letter_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_font_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:text="@string/fonts_disclaimer"
        android:textSize="@dimen/letter_medium"
        app:layout_constraintTop_toBottomOf="@id/text_fonts"
        />


    <TextView
        android:id="@+id/text_font_downloadable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:text="@string/fonts_downloadable"
        app:layout_constraintTop_toBottomOf="@id/text_font_disclaimer"
        style="@style/AppTheme.OreoSubTitle"
        />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_fonts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/text_font_downloadable"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:background="@color/colorAccent"
        android:text="@string/fonts_download"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/spinner_fonts"
        />

  </android.support.constraint.ConstraintLayout>
</ScrollView>